--- a/petstore-master/src/main/resources/application.properties
+++ b/petstore-master/src/main/resources/application.properties
@@ -23,5 +23,5 @@ quarkus.datasource.password = rajitha123
 quarkus.datasource.jdbc.url = jdbc:mysql://localhost:3305/petstore?verifyServerCertificate=false&autoReconnect=true&useSSL=false
 
 # drop and create the database at startup (use `update` to only update the schema) none drop-and-create
-quarkus.hibernate-orm.database.generation=none
+quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
