--- a/petstore-master/src/main/resources/application.properties
+++ b/petstore-master/src/main/resources/application.properties
@@ -5,6 +5,7 @@ quarkus.package.output-name=petstore
 quarkus.ssl.native=true
 
 quarkus.smallrye-jwt.enabled=false
+quarkus.http.test-port=8081
 
 
 quarkus.jaeger.service-name=Demo-Service-A
